@@ -12,7 +12,6 @@ import static java.util.Objects.requireNonNull;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -204,7 +203,7 @@ public final class SpecParser {
 
         @Override
         public List<Node> getChildren() {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
