@@ -7,8 +7,6 @@
  */
 package eu.maveniverse.maven.toolbox.shared.internal;
 
-import static guru.nidi.graphviz.model.Factory.mutGraph;
-import static guru.nidi.graphviz.model.Factory.mutNode;
 import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.toMap;
 import static org.apache.maven.search.api.request.BooleanQuery.and;
@@ -47,17 +45,11 @@ import eu.maveniverse.maven.toolbox.shared.Result;
 import eu.maveniverse.maven.toolbox.shared.Sink;
 import eu.maveniverse.maven.toolbox.shared.Source;
 import eu.maveniverse.maven.toolbox.shared.ToolboxCommando;
+import eu.maveniverse.maven.toolbox.shared.ToolboxGraph;
 import eu.maveniverse.maven.toolbox.shared.ToolboxResolver;
 import eu.maveniverse.maven.toolbox.shared.ToolboxSearchApi;
 import eu.maveniverse.maven.toolbox.shared.internal.domtrip.DOMTripUtils;
 import eu.maveniverse.maven.toolbox.shared.output.Output;
-import guru.nidi.graphviz.attribute.Color;
-import guru.nidi.graphviz.attribute.Label;
-import guru.nidi.graphviz.attribute.Shape;
-import guru.nidi.graphviz.engine.Format;
-import guru.nidi.graphviz.engine.Graphviz;
-import guru.nidi.graphviz.model.MutableGraph;
-import guru.nidi.graphviz.model.MutableNode;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
@@ -148,7 +140,7 @@ public class ToolboxCommandoImpl implements ToolboxCommando {
     protected final ToolboxSearchApiImpl toolboxSearchApi;
     protected final ArtifactRecorderImpl artifactRecorder;
     protected final ToolboxResolverImpl toolboxResolver;
-    protected final ToolboxGraphImpl toolboxGraph;
+    protected final ToolboxGraph toolboxGraph; // nullable
 
     protected final Map<String, RemoteRepository> knownSearchRemoteRepositories;
 
@@ -169,7 +161,9 @@ public class ToolboxCommandoImpl implements ToolboxCommando {
                 new MavenModelReader(context),
                 context.remoteRepositories(),
                 versionScheme);
-        this.toolboxGraph = new ToolboxGraphImpl(output);
+
+        // Graphviz is optional
+        this.toolboxGraph = ToolboxGraph.create(output).orElse(null);
         this.knownSearchRemoteRepositories = Collections.unmodifiableMap(createKnownSearchRemoteRepositories());
     }
 
@@ -390,8 +384,7 @@ public class ToolboxCommandoImpl implements ToolboxCommando {
         if (context.httpProxy() != null) {
             HTTPProxy proxy = context.httpProxy();
             result.put(
-                    "session.httpProxy",
-                    String.format("%s://%s:%s", proxy.getProtocol(), proxy.getHost(), proxy.getPort()));
+                    "session.httpProxy", "%s://%s:%s".formatted(proxy.getProtocol(), proxy.getHost(), proxy.getPort()));
             result.put("session.nonProxyHosts", proxy.getNonProxyHosts());
         }
 
@@ -799,7 +792,7 @@ public class ToolboxCommandoImpl implements ToolboxCommando {
             }));
             if (repositories.isEmpty()) {
                 output.tell("No remote repository is used by {} {}.", contextName, resolutionRoot.getArtifact());
-                result.put(contextName, Collections.emptyList());
+                result.put(contextName, List.of());
                 continue;
             }
 
@@ -807,19 +800,15 @@ public class ToolboxCommandoImpl implements ToolboxCommando {
             Map<Boolean, List<RemoteRepository>> repoGroupByMirrors = repositories.keySet().stream()
                     .collect(Collectors.groupingBy(
                             repo -> repo.getMirroredRepositories().isEmpty()));
-            repoGroupByMirrors
-                    .getOrDefault(Boolean.TRUE, Collections.emptyList())
-                    .forEach(r -> {
-                        output.tell(" * {}", r);
-                        Dependency firstIntroduced = repositories.get(r);
-                        output.tell(
-                                "   First introduced on {}", firstIntroduced == sentinel ? "root" : firstIntroduced);
-                    });
+            repoGroupByMirrors.getOrDefault(Boolean.TRUE, List.of()).forEach(r -> {
+                output.tell(" * {}", r);
+                Dependency firstIntroduced = repositories.get(r);
+                output.tell("   First introduced on {}", firstIntroduced == sentinel ? "root" : firstIntroduced);
+            });
 
             Map<RemoteRepository, RemoteRepository> mirrorMap = new HashMap<>();
-            repoGroupByMirrors
-                    .getOrDefault(Boolean.FALSE, Collections.emptyList())
-                    .forEach(repo -> repo.getMirroredRepositories().forEach(mrepo -> mirrorMap.put(mrepo, repo)));
+            repoGroupByMirrors.getOrDefault(Boolean.FALSE, List.of()).forEach(repo -> repo.getMirroredRepositories()
+                    .forEach(mrepo -> mirrorMap.put(mrepo, repo)));
             mirrorMap.forEach((r, mirror) -> {
                 output.tell(" * {}", r);
                 Dependency firstIntroduced = repositories.get(mirror);
@@ -1354,39 +1343,12 @@ public class ToolboxCommandoImpl implements ToolboxCommando {
             DependencyMatcher excludeDependencyMatcher,
             Path output)
             throws IOException {
-        Map<ReactorLocator.ReactorProject, Collection<Dependency>> result = toolboxGraph.projectDependencyGraph(
-                reactorLocator, showExternal, excludeSubprojectsMatcher, excludeDependencyMatcher);
-        Map<Artifact, String> labels = toolboxGraph.labels(result);
-        MutableGraph g = mutGraph("reactor")
-                .setDirected(true)
-                .graphAttrs()
-                .add(Label.of(
-                        ArtifactIdUtils.toId(reactorLocator.getTopLevelProject().artifact())))
-                .use((gr, ctx) -> {
-                    for (Map.Entry<ReactorLocator.ReactorProject, Collection<Dependency>> entry : result.entrySet()) {
-                        MutableNode from = mutNode(labels.get(entry.getKey().artifact()))
-                                .add(Color.BLUE)
-                                .add(Shape.BOX);
-                        for (Dependency dependency : entry.getValue()) {
-                            String source = dependency.getArtifact().getProperty("source", "internal");
-                            Color color;
-                            Shape shape;
-                            if ("internal".equals(source)) {
-                                color = Color.BLUE;
-                                shape = Shape.BOX;
-                            } else {
-                                color = Color.GREEN;
-                                shape = Shape.ELLIPSE;
-                            }
-                            from.addLink(mutNode(labels.get(dependency.getArtifact()))
-                                    .add(color)
-                                    .add(shape));
-                        }
-                    }
-                });
-
-        Graphviz.fromGraph(g).render(Format.SVG).toFile(output.toFile());
-        return Result.success(result);
+        if (toolboxGraph != null) {
+            return toolboxGraph.projectDependencyGraph(
+                    reactorLocator, showExternal, excludeSubprojectsMatcher, excludeDependencyMatcher, output);
+        } else {
+            throw new IllegalStateException("Graphing is not available");
+        }
     }
 
     @Override
@@ -1922,7 +1884,7 @@ public class ToolboxCommandoImpl implements ToolboxCommando {
             ci.next();
         }
         value *= Long.signum(bytes);
-        return String.format("%.1f %ciB", value / 1024.0, ci.current());
+        return "%.1f %ciB".formatted(value / 1024.0, ci.current());
     }
 
     public static String discoverArtifactVersion(String groupId, String artifactId, String defVal) {
