@@ -10,8 +10,8 @@ package eu.maveniverse.maven.toolbox.shared;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.eclipse.aether.artifact.Artifact;
 import org.eclipse.aether.artifact.DefaultArtifact;
 import org.eclipse.aether.util.version.GenericVersionScheme;
@@ -50,29 +50,25 @@ public class ArtifactVersionSelectorTest {
     @Test
     void identity() {
         assertEquals("v1", ArtifactVersionSelector.identity().apply(new DefaultArtifact("g:a:v1"), versions));
-        assertEquals(
-                "v1", ArtifactVersionSelector.identity().apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+        assertEquals("v1", ArtifactVersionSelector.identity().apply(new DefaultArtifact("g:a:v1"), List.of()));
     }
 
     @Test
     void last() {
         assertEquals("410.0.0-SNAPSHOT", ArtifactVersionSelector.last().apply(new DefaultArtifact("g:a:v1"), versions));
-        assertEquals(
-                "v1", ArtifactVersionSelector.last().apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+        assertEquals("v1", ArtifactVersionSelector.last().apply(new DefaultArtifact("g:a:v1"), List.of()));
     }
 
     @Test
     void prev() {
         assertEquals("3.1.0M1", ArtifactVersionSelector.prev().apply(new DefaultArtifact("g:a:3.1.0"), versions));
-        assertEquals(
-                "v1", ArtifactVersionSelector.prev().apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+        assertEquals("v1", ArtifactVersionSelector.prev().apply(new DefaultArtifact("g:a:v1"), List.of()));
     }
 
     @Test
     void next() {
         assertEquals("3.0.2-alpha", ArtifactVersionSelector.next().apply(new DefaultArtifact("g:a:3.0.1"), versions));
-        assertEquals(
-                "v1", ArtifactVersionSelector.next().apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+        assertEquals("v1", ArtifactVersionSelector.next().apply(new DefaultArtifact("g:a:v1"), List.of()));
     }
 
     @Test
@@ -80,16 +76,14 @@ public class ArtifactVersionSelectorTest {
         assertEquals(
                 "3.200.0-SNAPSHOT", ArtifactVersionSelector.major().apply(new DefaultArtifact("g:a:3.0.0"), versions));
         assertEquals("4.0.0", ArtifactVersionSelector.major().apply(new DefaultArtifact("g:a:4.0.0"), versions));
-        assertEquals(
-                "v1", ArtifactVersionSelector.major().apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+        assertEquals("v1", ArtifactVersionSelector.major().apply(new DefaultArtifact("g:a:v1"), List.of()));
     }
 
     @Test
     void sameMinor() {
         assertEquals("3.0.2-alpha", ArtifactVersionSelector.minor().apply(new DefaultArtifact("g:a:3.0.0"), versions));
         assertEquals("3.1.1M1", ArtifactVersionSelector.minor().apply(new DefaultArtifact("g:a:3.1.0"), versions));
-        assertEquals(
-                "v1", ArtifactVersionSelector.minor().apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+        assertEquals("v1", ArtifactVersionSelector.minor().apply(new DefaultArtifact("g:a:v1"), List.of()));
     }
 
     @Test
@@ -101,7 +95,7 @@ public class ArtifactVersionSelectorTest {
         assertEquals(
                 "v1",
                 ArtifactVersionSelector.noPreviews(ArtifactVersionSelector.major())
-                        .apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+                        .apply(new DefaultArtifact("g:a:v1"), List.of()));
     }
 
     @Test
@@ -113,7 +107,7 @@ public class ArtifactVersionSelectorTest {
         assertEquals(
                 "v1",
                 ArtifactVersionSelector.noPreviews(ArtifactVersionSelector.minor())
-                        .apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+                        .apply(new DefaultArtifact("g:a:v1"), List.of()));
     }
 
     @Test
@@ -131,11 +125,11 @@ public class ArtifactVersionSelectorTest {
         assertEquals(
                 "v1",
                 ArtifactVersionSelector.contextualSnapshotsAndPreviews()
-                        .apply(new DefaultArtifact("g:a:v1"), Collections.emptyList()));
+                        .apply(new DefaultArtifact("g:a:v1"), List.of()));
         assertEquals(
                 "v1-SNAPSHOT",
                 ArtifactVersionSelector.contextualSnapshotsAndPreviews()
-                        .apply(new DefaultArtifact("g:a:v1-SNAPSHOT"), Collections.emptyList()));
+                        .apply(new DefaultArtifact("g:a:v1-SNAPSHOT"), List.of()));
         // parent POM like (plain integer counter)
         assertEquals(
                 "3",
@@ -167,63 +161,60 @@ public class ArtifactVersionSelectorTest {
 
         assertEquals(
                 artifact.getVersion(),
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "identity()")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "identity()")
                         .apply(artifact, versions));
         assertEquals(
                 "2.0.0",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "first()")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "first()")
                         .apply(artifact, versions));
         assertEquals(
                 "410.0.0-SNAPSHOT",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "last()")
-                        .apply(artifact, versions));
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "last()").apply(artifact, versions));
         assertEquals(
                 "3.200.0-SNAPSHOT",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "major()")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "major()")
                         .apply(artifact, versions));
         assertEquals(
                 "3.0.2-alpha",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "minor()")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "minor()")
                         .apply(artifact, versions));
         assertEquals(
                 "3.200.0-SNAPSHOT",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "noPreviews(major())")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "noPreviews(major())")
                         .apply(artifact, versions));
         assertEquals(
                 "3.0.1",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "noPreviews(minor())")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "noPreviews(minor())")
                         .apply(artifact, versions));
         assertEquals(
                 "3.0.1",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "filtered(eq(3.0.1), last())")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "filtered(eq(3.0.1), last())")
                         .apply(artifact, versions));
         assertEquals(
                 "400.0.0",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "noSnapshotsAndPreviews(last())")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "noSnapshotsAndPreviews(last())")
                         .apply(artifact, versions));
         assertEquals(
                 "3.100.0",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "noSnapshotsAndPreviews(major())")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "noSnapshotsAndPreviews(major())")
                         .apply(artifact, versions));
 
         assertEquals(
                 "401.0.0RC",
-                ArtifactVersionSelector.build(
-                                versionScheme, Collections.emptyMap(), "contextualSnapshotsAndPreviews(last())")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "contextualSnapshotsAndPreviews(last())")
                         .apply(artifact.setVersion("3.0.0-rc-1"), versions));
         assertEquals(
                 "410.0.0-SNAPSHOT",
-                ArtifactVersionSelector.build(
-                                versionScheme, Collections.emptyMap(), "contextualSnapshotsAndPreviews(last())")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "contextualSnapshotsAndPreviews(last())")
                         .apply(artifact.setVersion("3.0.0-SNAPSHOT"), versions));
 
         assertEquals(
                 "3.101.0RC",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "contextualSnapshotsAndPreviews()")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "contextualSnapshotsAndPreviews()")
                         .apply(artifact.setVersion("3.0.0-rc-1"), versions));
         assertEquals(
                 "3.200.0-SNAPSHOT",
-                ArtifactVersionSelector.build(versionScheme, Collections.emptyMap(), "contextualSnapshotsAndPreviews()")
+                ArtifactVersionSelector.build(versionScheme, Map.of(), "contextualSnapshotsAndPreviews()")
                         .apply(artifact.setVersion("3.0.0-SNAPSHOT"), versions));
     }
 }
